--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ deploy:
     secure: $AWS_SECRET_ACCESS_KEY
   local_dir: dpl_cd_upload
   skip_cleanup: true
-  region: us-east-1
+  region: us-east-1c
   on:
     branch: master
   bucket: workshop-level400-s3-martinlan
@@ -21,6 +21,6 @@ deploy:
   key: workshop-${TRAVIS_BUILD_NUMBER}.zip
   application: workshop-level400-cicd
   deployment_group: master
-  region: us-east-1
+  region: us-east-1c
   on:
     branch: master
