--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ deploy:
   key: workshop-${TRAVIS_BUILD_NUMBER}.zip
   application: workshop-level400-cicd
   deployment_group: master
-  region: us-east-1c
+  region: us-east-1
   on:
     branch: master
