--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ deploy:
   secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: workshop-level400-s3-martinlan
   key: workshop-${TRAVIS_BUILD_NUMBER}.zip
-  application: workshop-level400-cicd
-  deployment_group: master
+  application: workshop-level400-codedeploy-martinlan
+  deployment_group: workshop-level400-codedeploy-martinlan
   region: us-east-1
   on:
     branch: master
