--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ deploy:
   region: us-east-1
   on:
     branch: master
-  bucket: workshop-level400-s3-martinlan
+  bucket: martinlan-1006
 - provider: codedeploy
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: workshop-level400-s3-martinlan
+  bucket: martinlan-1006
   key: workshop-${TRAVIS_BUILD_NUMBER}.zip
-  application: workshop-level400-codedeploy-martinlan
-  deployment_group: workshop-level400-codedeploy-martinlan
+  application: codedeploy-martinlan
+  deployment_group: codedeploy-martinlan
   region: us-east-1
   on:
     branch: master
